projects/compiler/test/parser/assignment_error_as_expr.out
Error at %FILE_NAME%:1:4
Unexpected token '=':
  |  [a = 1, b = 2]
        ^